<resources>
    <string name="app_name">CryptoPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="title_activity_single_page" translatable="false">SinglePageActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_assets">Add assets</string>
    <string name="analytics">Analytics</string>
    <string name="prices">Prices</string>
    <string name="portfolio">Portfolio</string>
    <string name="price" translatable="false">"1 %1$s = %2$s $"</string>
    <string name="history">History</string>
    <string name="assets">Assets</string>
    <string name="remove_assets">Remove assets</string>
    <string name="fragment_label_crypto">Crypto</string>
    <string name="fragment_label_portfolio_value">Portfolio value</string>
    <string name="fragment_analytics">Analytics</string>
    <string name="fragment_label_add_crypto">Add crypto</string>
    <string name="fragment_label_remove_crypto">Remove Crypto</string>
    <string name="fragment_label_history">History</string>
</resources>